--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,13 @@ on:
 
 jobs:
 
+  greet:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - name: Send greeting
+      run: echo "Thanks ${{ github.event.inputs.name }}!"
+
   build:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
